--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
+    "sharp": "^0.34.1",
     "tailwindcss": "^4.1.3",
+    "to-ico": "^1.1.5",
     "typescript": "^5"
   }
 }
