--- a/docs/api/thunder-collection_TAPPR-API.json
+++ b/docs/api/thunder-collection_TAPPR-API.json
@@ -45,15 +45,29 @@
       "description": "Retrieves a specific beer by its ID."
     },
     {
-      "name": "Get Beer by UUID (Public)",
+      "name": "Get Brew by Companion App UUID (Public)",
       "id": "r3",
-      "url": "{{baseUrl}}/beers/public/7dfb14c4-d288-4b1e-ae69-ec2d733aa434",
+      "url": "{{baseUrl}}/beers/public/550e8400-e29b-41d4-a716-446655440000",
       "method": "GET",
       "folder": "f1",
-      "description": "Retrieves a specific beer by its UUID. This endpoint is public and does not require authentication."
+      "description": "Retrieves a specific brew by its companion app UUID. This endpoint is public and does not require authentication."
     },
     {
-      "name": "Add New Beer",
+      "name": "Get Brew by API UUID",
+      "id": "r3a",
+      "url": "{{baseUrl}}/beers/api/7dfb14c4-d288-4b1e-ae69-ec2d733aa434",
+      "method": "GET",
+      "headers": [
+        {
+          "name": "X_API_Key",
+          "value": "{{apiKey}}"
+        }
+      ],
+      "folder": "f1",
+      "description": "Retrieves a specific brew by its API-generated UUID. This is the primary reference for brews in the API database."
+    },
+    {
+      "name": "Add New Brew",
       "id": "r4",
       "url": "{{baseUrl}}/beers/add",
       "method": "POST",
@@ -69,13 +83,13 @@
       ],
       "body": {
         "type": "json",
-        "raw": "{\n  \"name\": \"New Test Beer\",\n  \"style\": \"IPA\",\n  \"abv\": 5.5,\n  \"ibu\": 40,\n  \"description\": \"A test beer created via API\",\n  \"brewDate\": \"2024-04-15\",\n  \"kegLevel\": 100\n}"
+        "raw": "{\n  \"name\": \"New Test Brew\",\n  \"style\": \"IPA\",\n  \"abv\": 5.5,\n  \"ibu\": 40.5,\n  \"description\": \"A test brew created via API\",\n  \"brewDate\": \"2024-04-15\",\n  \"kegLevel\": 100,\n  \"brewUuid\": \"550e8400-e29b-41d4-a716-446655440001\"\n}"
       },
       "folder": "f1",
-      "description": "Adds a new beer to the system."
+      "description": "Adds a new brew to the system. The API will generate an apiBrewUuid and return both UUIDs in the response."
     },
     {
-      "name": "Update Beer",
+      "name": "Update Brew",
       "id": "r5",
       "url": "{{baseUrl}}/beers/1/update",
       "method": "PATCH",
@@ -91,13 +105,13 @@
       ],
       "body": {
         "type": "json",
-        "raw": "{\n  \"name\": \"Updated Beer Name\",\n  \"kegLevel\": 75\n}"
+        "raw": "{\n  \"name\": \"Updated Brew Name\",\n  \"kegLevel\": 75\n}"
       },
       "folder": "f1",
-      "description": "Updates an existing beer."
+      "description": "Updates an existing brew. Note that the UUIDs cannot be updated as they are immutable identifiers."
     },
     {
-      "name": "Delete Beer",
+      "name": "Delete Brew",
       "id": "r6",
       "url": "{{baseUrl}}/beers/1/delete",
       "method": "DELETE",
@@ -108,7 +122,7 @@
         }
       ],
       "folder": "f1",
-      "description": "Deletes a beer from the system."
+      "description": "Deletes a brew from the system."
     },
     {
       "name": "Get All Reviews",
@@ -139,9 +153,9 @@
       "description": "Retrieves a specific review by its ID."
     },
     {
-      "name": "Get Reviews by Brew UUID",
+      "name": "Get Reviews by Companion App Brew UUID",
       "id": "r9",
-      "url": "{{baseUrl}}/reviews/brew/7dfb14c4-d288-4b1e-ae69-ec2d733aa434",
+      "url": "{{baseUrl}}/reviews/brew/550e8400-e29b-41d4-a716-446655440000",
       "method": "GET",
       "headers": [
         {
@@ -150,7 +164,21 @@
         }
       ],
       "folder": "f2",
-      "description": "Retrieves all reviews for a specific brew."
+      "description": "Retrieves all reviews for a specific brew using the companion app UUID (for backward compatibility)."
+    },
+    {
+      "name": "Get Reviews by API Brew UUID",
+      "id": "r9a",
+      "url": "{{baseUrl}}/reviews/api-brew/7dfb14c4-d288-4b1e-ae69-ec2d733aa434",
+      "method": "GET",
+      "headers": [
+        {
+          "name": "X_API_Key",
+          "value": "{{apiKey}}"
+        }
+      ],
+      "folder": "f2",
+      "description": "Retrieves all reviews for a specific brew using the API-generated UUID (primary reference)."
     },
     {
       "name": "Add Review",
@@ -169,7 +197,7 @@
       ],
       "body": {
         "type": "json",
-        "raw": "{\n  \"brewUuid\": \"7dfb14c4-d288-4b1e-ae69-ec2d733aa434\",\n  \"reviewerName\": \"API Tester\",\n  \"isAnonymous\": false,\n  \"reviewType\": \"quick\",\n  \"quickReview\": {\n    \"overallRating\": 4,\n    \"comments\": \"Great beer, tested via API!\"\n  }\n}"
+        "raw": "{\n  \"apiBrewUuid\": \"7dfb14c4-d288-4b1e-ae69-ec2d733aa434\",\n  \"brewUuid\": \"550e8400-e29b-41d4-a716-446655440000\",\n  \"reviewerName\": \"API Tester\",\n  \"isAnonymous\": false,\n  \"reviewType\": \"quick\",\n  \"quickReview\": {\n    \"overallRating\": 4,\n    \"comments\": \"Great brew, tested via API!\"\n  }\n}"
       },
       "folder": "f2",
       "description": "Adds a new review."
@@ -187,10 +215,10 @@
       ],
       "body": {
         "type": "json",
-        "raw": "{\n  \"brewUuid\": \"7dfb14c4-d288-4b1e-ae69-ec2d733aa434\",\n  \"reviewerName\": \"Public Reviewer\",\n  \"isAnonymous\": false,\n  \"reviewType\": \"quick\",\n  \"quickReview\": {\n    \"overallRating\": 5,\n    \"comments\": \"Excellent beer, reviewed publicly!\"\n  }\n}"
+        "raw": "{\n  \"brewUuid\": \"550e8400-e29b-41d4-a716-446655440000\",\n  \"reviewerName\": \"Public Reviewer\",\n  \"isAnonymous\": false,\n  \"reviewType\": \"quick\",\n  \"quickReview\": {\n    \"overallRating\": 5,\n    \"comments\": \"Excellent brew, reviewed publicly!\"\n  }\n}"
       },
       "folder": "f2",
-      "description": "Adds a new review without requiring authentication. This endpoint is public."
+      "description": "Adds a new review without requiring authentication. This endpoint is public and only requires the companion app UUID. The API will look up the corresponding apiBrewUuid."
     },
     {
       "name": "Update Review",
