--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 
 # API key for authentication
 TAPPR_API_KEY=your_api_key_here
+
+# API URL for client-side requests (optional, defaults to empty string)
+NEXT_PUBLIC_API_URL=
