Remove hardcoded API keys and credentials from codebase and documentation

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,9 @@
 NEXT_PUBLIC_SUPABASE_URL=https://your-project-id.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 
-# API key for authentication
-TAPPR_API_KEY=your_api_key_here
+# API keys for authentication
+TAPPR_API_KEY=your_production_api_key_here
+TAPPR_DEV_API_KEY=your_development_api_key_here
 
 # API URL for client-side requests (optional, defaults to empty string)
 NEXT_PUBLIC_API_URL=
