--- a/docs/api/postman/TAPPr_Recipe_API_v2.postman_collection.json
+++ b/docs/api/postman/TAPPr_Recipe_API_v2.postman_collection.json
@@ -974,7 +974,7 @@
 		},
 		{
 			"key": "api_key",
-			"value": "tappr_api_key_12345",
+			"value": "your_api_key_here",
 			"type": "string",
 			"description": "Your TAPPr API key"
 		},
