--- a/docs/api/tappr-api-collection.json
+++ b/docs/api/tappr-api-collection.json
@@ -381,7 +381,7 @@
     },
     {
       "key": "apiKey",
-      "value": "tappr_api_key_12345",
+      "value": "your_api_key_here",
       "type": "string"
     }
   ]
